--- a/tts.html
+++ b/tts.html
@@ -10,32 +10,36 @@
     <p id="message">Carregando texto...</p>
 
     <script>
+        // URL do arquivo JSON que contém o texto dinâmico
+        const jsonUrl = 'https://araujoeduarda.github.io/meu-qr-texto/teste.json';
+
         // Função para buscar o texto dinamicamente
         async function fetchText() {
             try {
-                // Suponha que você esteja carregando o texto de um arquivo ou API
-                const response = await fetch('https://seusite.com/api/texto'); // URL da sua API ou arquivo
+                const response = await fetch(jsonUrl);
                 const data = await response.json();
-
-                // Exibir o texto na página
                 document.getElementById('message').innerText = data.text;
-
-                // Falar o texto em voz alta
-                speakText(data.text);
+                // Pequeno atraso para garantir que o texto seja exibido antes da leitura
+                setTimeout(() => speakText(data.text), 500); 
             } catch (error) {
                 document.getElementById('message').innerText = 'Erro ao carregar o texto.';
+                console.error('Erro ao carregar o texto:', error);
             }
         }
 
         // Função para falar o texto em voz alta
         function speakText(text) {
-            const synth = window.speechSynthesis;
-            const utterance = new SpeechSynthesisUtterance(text);
-            utterance.lang = 'pt-BR'; // Definir para Português Brasil
-            synth.speak(utterance);
+            if ('speechSynthesis' in window) {
+                const synth = window.speechSynthesis;
+                const utterance = new SpeechSynthesisUtterance(text);
+                utterance.lang = 'pt-BR'; // Definir para Português Brasil
+                synth.speak(utterance);
+            } else {
+                console.error('API de síntese de voz não suportada neste navegador.');
+            }
         }
 
-        // Carregar o texto e falar automaticamente
+        // Carregar o texto e falar automaticamente ao carregar a página
         fetchText();
     </script>
 </body>
