--- a/tts.html
+++ b/tts.html
@@ -11,7 +11,7 @@
 
     <script>
         // URL do arquivo JSON que contém o texto dinâmico
-        const jsonUrl = 'https://qrjson.netlify.app/teste.json';
+        const jsonUrl = 'https://araujoeduarda.github.io/meu-qr-texto/teste.json';
 
         // Função para buscar o texto dinamicamente
         async function fetchText() {
